# Deposito-Buda-AI-Academy

./: README.md  main.py  prova.py
2025-08-22/: open_ai_API.ipynb  (+2 more)
2025_08_26/exercise_flow/: README.md  exercise_flow_plot.html  pyproject.toml
2025_08_26/exercise_flow/src/exercise_flow/: main.py
2025_08_27/rag_or_search/: README.md  crewai_flow.html  pyproject.toml  report.md
2025_08_27/rag_or_search/docs/: conf.py
2025_08_27/rag_or_search/docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
2025_08_27/rag_or_search/docs/_build/html/.doctrees/: environment.pickle  index.doctree
2025_08_27/rag_or_search/docs/_build/html/_sources/: index.rst.txt
2025_08_27/rag_or_search/faiss_index_example/: index.pkl
2025_08_27/rag_or_search/src/rag_or_search/: __init__.py  main.py
2025_08_27/rag_or_search/src/rag_or_search/crews/mathcrew/: mathcrew.py
2025_08_27/rag_or_search/src/rag_or_search/crews/mathcrew/config/: agents.yaml  tasks.yaml
2025_08_27/rag_or_search/src/rag_or_search/crews/ragcrew/: ragcrew.py
2025_08_27/rag_or_search/src/rag_or_search/crews/searchcrew/: searchcrew.py
2025_08_27/rag_or_search/src/rag_or_search/crews/teachercrew/: teachercrew.py
2025_08_27/rag_or_search/src/rag_or_search/tools/: rag.py  rag_utils.py  search.py
2025_08_27/sum_or_search/: README.md  pyproject.toml  report.md
2025_08_27/sum_or_search/src/sum_or_search/: main.py
2025_08_27/sum_or_search/src/sum_or_search/crews/searchcrew/: searchcrew.py
2025_08_27/sum_or_search/src/sum_or_search/crews/sumcrew/: sum_crew.py
2025_08_27/sum_or_search/src/sum_or_search/tools/: search.py  sum.py
(+51 files in other folders)
