[project]
name = "exercise_flow"
version = "0.1.0"
description = "exercise_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.165.1,<1.0.0",
]

[project.scripts]
kickoff = "exercise_flow.main:kickoff"
run_crew = "exercise_flow.main:kickoff"
plot = "exercise_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
