[project]
name = "sum_or_search"
version = "0.1.0"
description = "sum_or_search using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.165.1,<1.0.0",
]

[project.scripts]
kickoff = "sum_or_search.main:kickoff"
run_crew = "sum_or_search.main:kickoff"
plot = "sum_or_search.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
